--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -1,4 +1,4 @@
-<a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/dsc2569/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/dsc2569/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/dsc2569/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/dsc2569/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/dsc2569/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/dsc2569/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/dsc2569/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/dsc2569/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/dsc2569/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/dsc2569/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/dsc2569/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/dsc2569/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/dsc2569/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/dsc2569/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/dsc2569/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/dsc2569/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/dsc2569/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/dsc2569/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p><a href="https://qq112.gqaew.ml/bewcjau/p7y" rel="nofollow">大纪元</a> | <a href="https://qq112.gqaew.ml/bewcjau/q513o" rel="nofollow">动态网</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=G5IN0M9kn5F64" rel="nofollow">神州</a> | <a href="https://qq112.gqaew.ml/bewcjau/p8s" rel="nofollow">退党</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=oQhDrP9jaNomgd953b1AgeVB1TtAnol74" rel="nofollow">九评</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=8D43fA4loYFTi0" rel="nofollow">网门</a> | <a href="https://qq112.gqaew.ml/bewcjau/z4t" rel="nofollow">神韵</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=ZiIMbsVmsNV54" rel="nofollow">新纪元</a> | <a href="https://qq112.gqaew.ml/bewcjau/a11z" rel="nofollow">看中国</a> | <a href="https://qq112.gqaew.ml/bewcjau/v3u" rel="nofollow">明慧网</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=sM1DqTVg5hMgn4FQl7oQjflQm187n3t4q0" rel="nofollow">明慧十方</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=vPRklaR07gs12hxAhrdwgbJkm7RxrotQgI12" rel="nofollow">明慧焦点</a> | <a href="https://qq112.gqaew.ml/bewcjau/r9g" rel="nofollow">希望之声</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=Trlljilh3b4huwVSsHESoz5SvBo5o-J7l0" rel="nofollow">漫谈党文化</a ></p><p><a href="https://qq112.gqaew.ml/bewcjau/i5d" rel="nofollow">新唐人</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=LrN5nvs5grJMkhpwijNQ48Z2nK5nsu12" rel="nofollow">亚太台</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=yNJnohBwu4JRnM12" rel="nofollow">直播</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=UkhBjj9N2703cJEnpFp7aDNCryFD8jdCoAB44" rel="nofollow">传奇</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=RpJRggtN0fc1hvNmsJMmoxZmsDgBpVBDl0" rel="nofollow">神话</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=7Hlmvylie_4ytNRDoYI7sOVDrSsQtKxmh0" rel="nofollow">人生</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=I01Am7Vx128g1qYAlkBk5kBlmnpDbvZCtMR54" rel="nofollow">伪火</a > | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=QoxBgvpN29ghhs95sKQCpwN6sEklpUVTl0" rel="nofollow">真相片</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=I01Am7VN0tEklpp46nNBniFA4zNSsTx54" rel="nofollow">藏字石</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=hZZTpYJ38DA2aR8mvNV6cfhAha9B2XJAms574" rel="nofollow">短视频</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=4ExCsLpie-gitI9Sv-UTtTRToVE4tHZ6g0" rel="nofollow">告诉未来</a > | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=F5tQn4dM6s000tEklpp46nNBniFA4zNSsTx54" rel="nofollow">终级目的</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=i_V7oZxP9wAOaQk6vOZS3etQhddl2WhQmv174" rel="nofollow">中共活摘</a > | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=wcNAlbFM4kwgk8pQm38QibBRhtU6m7d4r0" rel="nofollow">风雨天地行</a></p></td></tr>
+<a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/dsc2569/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/dsc2569/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/dsc2569/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/dsc2569/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/dsc2569/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/dsc2569/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/dsc2569/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/dsc2569/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/dsc2569/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/dsc2569/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/dsc2569/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/dsc2569/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/dsc2569/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/dsc2569/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/dsc2569/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/dsc2569/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/dsc2569/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/dsc2569/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p><a href="https://qq112.gqaew.ml/mhbzfh/r7d" rel="nofollow">大纪元</a> | <a href="https://qq112.gqaew.ml/mhbzfh/p513f" rel="nofollow">动态网</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=G5IN0M9kn5F64" rel="nofollow">神州</a> | <a href="https://qq112.gqaew.ml/mhbzfh/n8k" rel="nofollow">退党</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=oQhDrP9jaNomgd953b1AgeVB1TtAnol74" rel="nofollow">九评</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=8D43fA4loYFTi0" rel="nofollow">网门</a> | <a href="https://qq112.gqaew.ml/mhbzfh/a4o" rel="nofollow">神韵</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=ZiIMbsVmsNV54" rel="nofollow">新纪元</a> | <a href="https://qq112.gqaew.ml/mhbzfh/a11r" rel="nofollow">看中国</a> | <a href="https://qq112.gqaew.ml/mhbzfh/s3t" rel="nofollow">明慧网</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=sM1DqTVg5hMgn4FQl7oQjflQm187n3t4q0" rel="nofollow">明慧十方</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=vPRklaR07gs12hxAhrdwgbJkm7RxrotQgI12" rel="nofollow">明慧焦点</a> | <a href="https://qq112.gqaew.ml/mhbzfh/x9c" rel="nofollow">希望之声</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=Trlljilh3b4huwVSsHESoz5SvBo5o-J7l0" rel="nofollow">漫谈党文化</a ></p><p><a href="https://qq112.gqaew.ml/mhbzfh/h5n" rel="nofollow">新唐人</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=LrN5nvs5grJMkhpwijNQ48Z2nK5nsu12" rel="nofollow">亚太台</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=yNJnohBwu4JRnM12" rel="nofollow">直播</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=UkhBjj9N2703cJEnpFp7aDNCryFD8jdCoAB44" rel="nofollow">传奇</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=RpJRggtN0fc1hvNmsJMmoxZmsDgBpVBDl0" rel="nofollow">神话</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=7Hlmvylie_4ytNRDoYI7sOVDrSsQtKxmh0" rel="nofollow">人生</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=I01Am7Vx128g1qYAlkBk5kBlmnpDbvZCtMR54" rel="nofollow">伪火</a > | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=QoxBgvpN29ghhs95sKQCpwN6sEklpUVTl0" rel="nofollow">真相片</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=I01Am7VN0tEklpp46nNBniFA4zNSsTx54" rel="nofollow">藏字石</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=hZZTpYJ38DA2aR8mvNV6cfhAha9B2XJAms574" rel="nofollow">短视频</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=4ExCsLpie-gitI9Sv-UTtTRToVE4tHZ6g0" rel="nofollow">告诉未来</a > | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=F5tQn4dM6s000tEklpp46nNBniFA4zNSsTx54" rel="nofollow">终级目的</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=i_V7oZxP9wAOaQk6vOZS3etQhddl2WhQmv174" rel="nofollow">中共活摘</a > | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=wcNAlbFM4kwgk8pQm38QibBRhtU6m7d4r0" rel="nofollow">风雨天地行</a></p></td></tr>
 <tr><td VALIGN=TOP width="355" height="1000"><a href="https://github.com/dsc2569/djy/blob/master/gb/20/5/15/n12113370.md#1"><img width="320" src="https://i.epochtimes.com/assets/uploads/2020/05/000_1RO0AV-320x200.jpg"><p align="center">【最新疫情5·17】川普：对贸易协议略失兴趣</p></a>
 <a href="https://github.com/dsc2569/djy/blob/master/gb/20/5/15/n12113370.md#1" title="【最新疫情5·17】川普：对贸易协议略失兴趣""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/05/000_1RO0AV-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/dsc2569/djy/blob/master/gb/20/5/17/n12115569.md#1" title="组图：精美绘画载希望 帮人度过夺命瘟疫""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/05/2020-5-6-mh-quancunsantui-320x200.jpg">&nbsp;</a>
@@ -13,12 +13,12 @@
 <a href="https://github.com/dsc2569/djy/blob/master/gb/20/5/16/n12114630.md#1" title="加国会议员通过社交媒体庆祝法轮大法日""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/05/JamesBezan-2-320x200.png">&nbsp;</a>
 <a href="https://github.com/dsc2569/djy/blob/master/gb/20/5/15/n12113326.md#1" title="中共不配合疫情调查 美参众议员推法案制裁""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/05/Capitol_Building-320x200.jpg">&nbsp;</a>
 <p align="center"><a href="https://github.com/dsc2569/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://dsc2569.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>9分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/dsc2569/djy/blob/master/gb/20/5/17/n12115597.md#1">美中关系紧张 大陆股汇走弱 人民币连跌5天</a><br>
-:clock8: <em>9分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/dsc2569/djy/blob/master/gb/20/5/17/n12115981.md#1">深圳女子28年前买了房 想起时已被人撬锁入住</a><br>
-:clock8: <em>13分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/dsc2569/djy/blob/master/gb/20/5/17/n12115994.md#1">河南潢川县5名男中学生溺亡</a><br>
-:clock8: <em>18分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/dsc2569/djy/blob/master/gb/20/5/16/n12114671.md#1">广西半塘村村民集体举报政府强拆 中饱私囊</a><br>
-:clock8: <em>23分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/dsc2569/djy/blob/master/gb/20/5/17/n12116013.md#1">中共驻以色列大使杜伟突然在官邸死亡</a><br>
-:clock8: <em>30分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/dsc2569/djy/blob/master/gb/20/5/17/n12115987.md#1">深圳6月大女婴被高空坠物砸中 头部变形</a><br>
+:clock8: <em>26分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/dsc2569/djy/blob/master/gb/20/5/17/n12115597.md#1">美中关系紧张 大陆股汇走弱 人民币连跌5天</a><br>
+:clock8: <em>26分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/dsc2569/djy/blob/master/gb/20/5/17/n12115981.md#1">深圳女子28年前买了房 想起时已被人撬锁入住</a><br>
+:clock8: <em>30分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/dsc2569/djy/blob/master/gb/20/5/17/n12115994.md#1">河南潢川县5名男中学生溺亡</a><br>
+:clock8: <em>35分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/dsc2569/djy/blob/master/gb/20/5/16/n12114671.md#1">广西半塘村村民集体举报政府强拆 中饱私囊</a><br>
+:clock8: <em>40分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/dsc2569/djy/blob/master/gb/20/5/17/n12116013.md#1">中共驻以色列大使杜伟突然在官邸死亡</a><br>
+:clock8: <em>47分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/dsc2569/djy/blob/master/gb/20/5/17/n12115987.md#1">深圳6月大女婴被高空坠物砸中 头部变形</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
 <a href="https://github.com/dsc2569/djy/blob/master/gb/20/5/15/n12113099.md#1">川普称可切断“美中关系” 赵立坚软化回应</a><br>
 <a href="https://github.com/dsc2569/djy/blob/master/gb/20/5/15/n12112161.md#1">四川公民转传一张图片 引来国保二次上门</a><br>
@@ -41,7 +41,7 @@
 
 ```diff
 !退出中共党、团、队总人数:
-!共 356,245,966 人
+!共 356,247,000 人
 ```
 </strong><p align="center"><strong align="center"><a href="https://x.co/dd3">我要退出中共党团队</a></strong></h2></td>
 <td VALIGN=TOP width="352">
@@ -113,10 +113,10 @@
 <a href="https://github.com/dsc2569/djy/blob/master/gb/20/5/6/n12088232.md#1">【独家】中共密件曝医院恐被债务压垮</a><br>
 <a href="https://github.com/dsc2569/djy/blob/master/gb/20/5/7/n12088930.md#1">【内幕】上海帮白手套的命运（上）</a><br>
 <a href="https://github.com/dsc2569/djy/blob/master/gb/20/5/5/n12085029.md#1">【名家专栏】美社交媒体充当“老大哥”</a><br>
-<br><p align="center"><a href="https://github.com/dsc2569/djy/blob/master/gb/nf6092.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>传统文化</strong></p></h2><a href="https://github.com/dsc2569/djy/blob/master/gb/20/5/14/n12109562.md#1">屡现神迹的唐朝高僧释僧伽</a><br>
+<br><p align="center"><a href="https://github.com/dsc2569/djy/blob/master/gb/nf6092.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>传统文化</strong></p></h2><a href="https://github.com/dsc2569/djy/blob/master/gb/20/5/17/n12116029.md#1">隋朝人仙岛奇遇 回国已是唐朝中期</a><br>
+<a href="https://github.com/dsc2569/djy/blob/master/gb/20/5/14/n12109562.md#1">屡现神迹的唐朝高僧释僧伽</a><br>
 <a href="https://github.com/dsc2569/djy/blob/master/gb/20/5/11/n12098560.md#1">宗教与艺术——天堂印象的不同诠释</a><br>
 <a href="https://github.com/dsc2569/djy/blob/master/gb/20/4/12/n12024879.md#1">【馨香雅句】周公制礼 哪些影响上千年</a><br>
 <a href="https://github.com/dsc2569/djy/blob/master/gb/13/7/18/n3919814.md#1">米开朗基罗（8）《创世纪》（下）</a><br>
 <a href="https://github.com/dsc2569/djy/blob/master/gb/20/4/13/n12026603.md#1">【命理】皇帝命是怎样来的？</a><br>
-<a href="https://github.com/dsc2569/djy/blob/master/gb/20/5/6/n12088827.md#1">中国人的姓名字号（3）</a><br>
 <br><p align="center"><a href="https://github.com/dsc2569/djy/blob/master/gb/news2007.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>九评共产党</strong></p></h2><a href="https://github.com/dsc2569/djy/blob/master/gb/4/11/19/n722529.md#1" target="_blank">【一】评共产党是什么</a><br><a href="https://github.com/dsc2569/djy/blob/master/gb/4/11/21/n723946.md#1" target="_blank">【二】评中国共产党是怎样起家的</a><br><a href="https://github.com/dsc2569/djy/blob/master/gb/4/11/23/n725597.md#1" target="_blank">【三】评中国共产党的暴政</a><br><a href="https://github.com/dsc2569/djy/blob/master/gb/4/11/25/n727814.md#1" target="_blank">【四】评共产党是反宇宙的力量</a><br><a href="https://github.com/dsc2569/djy/blob/master/gb/4/11/27/n730058.md#1" target="_blank">【五】评江泽民与中共相互利用迫害法轮功</a><br><a href="https://github.com/dsc2569/djy/blob/master/gb/4/11/29/n731667.md#1" target="_blank">【六】评中国共产党破坏民族文化</a><br><a href="https://github.com/dsc2569/djy/blob/master/gb/4/12/1/n733806.md#1" target="_blank">【七】评中国共产党的杀人历史</a><br><a href="https://github.com/dsc2569/djy/blob/master/gb/4/12/3/n735942.md#1" target="_blank">【八】评中国共产党的邪教本质</a><br><a href="https://github.com/dsc2569/djy/blob/master/gb/4/12/4/n737542.md#1" target="_blank">【九】评中国共产党的流氓本性</a></td><td VALIGN=TOP width="352"><h2><p><strong>大纪元重要书籍</strong></p></h2><a href="https://github.com/dsc2569/djy/blob/master/gb/nf3541.md#1" target="_blank">《九评共产党》</a><br><a href="https://github.com/dsc2569/djy/blob/master/gb/nf1235328.md#1" target="_blank">《共产主义的终极目的》</a><br><a href="https://github.com/dsc2569/djy/blob/master/gb/nf1267582.md#1" target="_blank">《魔鬼在统治着我们的世界》</a><br><a href="https://github.com/dsc2569/djy/blob/master/gb/nf3628.md#1" target="_blank">《解体党文化》</a><br><a href="https://github.com/dsc2569/djy/blob/master/gb/nf1242535.md#1" target="_blank">《真实的江泽民》</a><br><a href="https://github.com/dsc2569/djy/blob/master/gb/nf1138304.md#1" target="_blank">《中国历史正述》</a><br><a href="https://github.com/dsc2569/djy/blob/master/gb/nf1076978.md#1" target="_blank">《千古英雄人物》</a><br><br><p align="center"><a href="https://github.com/dsc2569/djy/blob/master/gb/nf3046.md#1">更多......</a></p></td></tr></table><div align="center"><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/dsc2569/djy/blob/master/gb/nf1351518.md#1<br><a href="https://github.com/dsc2569/djy/blob/master/gb/nf1351518.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/dsc2569/djy/blob/master/gb/nf1351518.md%231" title="分享本文章"></a><br>原文地址： <a href="https://www.epochtimes.com/gb/nf1351518.htm">https://www.epochtimes.com/gb/nf1351518.htm</a>    （国内需<a href="https://github.com/dsc2569/www/blob/master/README.md#8">下载翻墙软件</a>才能访问）</div>
